Fix clipping of log out in menu on Firefox

--- a/tutor/resources/styles/components/top-nav-bar/drop-down-menu.less
+++ b/tutor/resources/styles/components/top-nav-bar/drop-down-menu.less
@@ -33,6 +33,10 @@
         background-color: @tutor-neutral-lighter;
         color: @tutor-neutral-darker;
       }
+
+      form input[type="submit"] {
+        line-height: inherit;
+      }
     }
 
     input[type=submit] {
